After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 769123 - Annotations disappear after reloading a document with multiple copies opened
Annotations disappear after reloading a document with multiple copies opened
Status: RESOLVED FIXED
Product: evince
Classification: Core
Component: pdf annotations
git master
Other Linux
: Normal normal
: ---
Assigned To: Evince Maintainers
Evince Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-07-23 22:14 UTC by Germán Poo-Caamaño
Modified: 2016-09-28 15:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
shell: ask before reload if the document has been modified (5.61 KB, patch)
2016-07-30 20:23 UTC, José Aliste
committed Details | Review

Description Germán Poo-Caamaño 2016-07-23 22:14:03 UTC
From Bug 760299

1. Open a document (D)
2. Add an annotation.
3. Open a copy of the document (C)
4. In (C) add an annotation.
5. Go back to (D)
6. Press Ctrl+R to reload the document.
==> The annotations are gone in (D).
Comment 1 José Aliste 2016-07-24 01:02:46 UTC
Actually, you can just do 1,2 and 6 and you will have the same result. No?
Comment 2 José Aliste 2016-07-30 20:23:04 UTC
Created attachment 332409 [details] [review]
shell: ask before reload if the document has been modified
Comment 3 Carlos Garcia Campos 2016-09-03 06:52:25 UTC
Review of attachment 332409 [details] [review]:

This looks good to me, I'm sorry I'm late and we are now frozen. We can either ask for a break or push this after branching.

::: shell/ev-window.c
@@ +124,3 @@
+	EV_RELOAD,
+	EV_CLOSE
+} EvWindowAction;

This name is a bit confusing, it's probably too generic. And the enum values should be consistent with the type name, in this case they should be EV_WINDOW_ACTION_FOO or at least EV_WINDOW_FOO
Comment 4 Germán Poo-Caamaño 2016-09-28 15:55:17 UTC
Review of attachment 332409 [details] [review]:

Pushed with the changes applied
https://git.gnome.org/browse/evince/commit/?id=1914112be4bc604a564eb97c0f891fb0e86354b3
Comment 5 Germán Poo-Caamaño 2016-09-28 15:55:39 UTC
This problem has been fixed in the unstable development version. The fix will be available in the next major software release. You may need to upgrade your Linux distribution to obtain that newer version.