shell: ask before reload if the document has been modified

https://bugzilla.gnome.org/show_bug.cgi?id=769123